# governed-cognitive-loop

./: .containerignore  .gitignore  CLAUDE.md  Containerfile  README.md  governed-cognitive-loop-build-prompt.md  governed-cognitive-loop-story-arc-build-prompt.md  podman-compose.yaml  preflight.sh  pyproject.toml  verify.sh
.githooks/: pre-commit
.github/workflows/: ci.yaml
config/defaults/: constraints.yaml  loop.yaml  objective_templates.yaml  semantic_routing.yaml
deploy/: deployment.yaml  namespace.yaml  semantic-router.yaml
deploy/guardian/: guardian.yaml  honesty-boundary.rego
docs/: MAPPING.md  READFIRST.md  architecture.md  contracts.md  decision-package-v1.md  ecosystem-overview.md  event-flow-proof.md  story-arc.md  walkthrough.md
docs/benchmarks/: ecosystem-stress-benchmarks.md  failure-mode-benchmarks.md  gcl-benchmarks.md  (+1 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
gcl/: config.py
tests/: conftest.py  test_accountability.py  test_api.py  test_authority.py  test_classification_adapter.py  test_config.py  test_constraint_classifier.py  test_contracts.py  test_controller.py  test_decision_package.py  test_deepfield_event_adapter.py  test_deployment_contract.py  test_ecosystem_stress.py  test_falsification_gate.py  test_fleet_adapter.py  test_horizon_predictor.py  test_inference_guardian.py  test_ledger.py  test_loop_driver.py  test_objective_interpreter.py  test_passport.py  test_prompt_classifier.py  test_properties.py  test_proposer_adapter.py  test_rubrics.py  test_scenario.py  test_scenarios.py  test_signals.py
(+55 files in other folders)
