[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "governed-cognitive-loop"
version = "0.1.0"
description = "LLM-MPC with evidence-based constraint classification and hypothesis falsification before commit"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "eval-type-backport>=0.4.0; python_version < '3.10'",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "uvicorn>=0.29.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["gcl*"]
